--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: compiled-binary
+          path: target/release/actix-jsonplaceholder
+          retention-days: 5
