--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 chrono = "0"
 chrono-tz = "0"
-uuid = { vesion = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4"] }
+
+reqwest = "^0"
+tokio = { version = "^1", features = ["full"] }
